fix: color contrast

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ div {
 }
 
 .green p {
-    color: #C4C4C4;
+    color: #ffffff;
 }
 
 footer {
